--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
-<script src="dist/index.js"></script>
+<script src="dist/index.js"
+        type="application/json"></script>
 </body>
 </html>
